added the content in the career services field

--- a/index.html
+++ b/index.html
@@ -80,31 +80,63 @@
     </div>
   </section>
   <section>
-    <div class="container" style="width: auto; height: 490px; background-color: aquamarine;">
+    <div class="container" style="width: auto; height: auto; background-color: aquamarine;">
       <h3 class="text-center pt-5">Our Courses</h3>
       <p class="small text-center">Immersive training programs aimed at accelerating your career in tech, regardless of your experience level. We meet you where you’re at, and support you far beyond your goals!
       </p>
-    </div>
     <div class="d-flex justify-content-between">
-        <div>
+        <div class="border border-light bg-light p-5 m-2">
+            <div>
+              <h6>Become a Full Stack Web Developer</h6>
+              12 Week Course - In classroom
+            </div>
+            <img class="" src="images/webdeveloper.png" alt="" width="220px" height="220px">
+              <p class="text-center">R26,000,00 Excl Vat</p>
+              <p class="text-center">View course detail</p>
+              <div class="ml-3 border rounded border-primary text-center text-primary" style="width: 190px;">
+                Add to enquiry
+              </div>
+        </div>
+        <div class="border border-light bg-light p-5 m-2">
           <div>
-            <h5>Become a Full Stack Web Developer</h5>
+            <h6>Become a Front End Web Developer</h6>
+            4 Week Course - In classroom
+          </div>
+          <img src="images/frontend-dev-banner.png" alt="" width="220px" height="220px">
+            <p class="text-center">R26,000,00 Excl Vat</p>
+            <p class="text-center">View course detail</p>
+            <div class="ml-3 border rounded border-primary text-center text-primary" style="width: 190px;">
+              Add to enquiry
+            </div>
+        </div>
+        <div class="border border-light bg-light p-5 m-2">
+          <div>
+            <h6>Become a Java Spring Boot Developer</h6>
             12 Week Course - In classroom
           </div>
+          <img src="images/spring-boot-dev.png" alt="" width="220px" height="220px">
+            <p class="text-center">R26,000,00 Excl Vat</p>
+            <p class="text-center">View course detail</p>
+            <div class="ml-4 border rounded border-primary text-center text-primary" style="width: 190px;">
+              Add to enquiry
+            </div>
         </div>
-        <div>
-          <h5>Become a Front End Web Developer</h5>
-          4 Week Course - In classroom
-        </div>
-        <div>
-          <h5>Become a Java Spring Boot Developer</h5>
-          12 Week Course - In classroom
-        </div>
+      </div>
     </div>
   </section>
   <section>
     <div class="container" style="width: auto; height: 400px; background-color: whitesmoke;">
-      
+      <div class="p-5">
+        <h3>Career Services</h3>
+        <p class="small">The Maven Academy is committed to helping you secure a new job after finishing your bootcamp. With your hard-work and our help, we’re confident that you can get hired by a fantastic company.
+        </p>
+          <div class="d-flex justify-content-between">
+            <img src="images/logo-zando.png" alt="" width="220px" height="120px">
+            <img src="images/logo-nedbank.png" alt="" width="220px" height="120px">
+            <img src="images/logo-vuma.png" alt="" width="220px" height="120px">
+            <img src="images/logo-flash.png" alt="" width="220px" height="120px">
+          </div> 
+      </div>
     </div>
   </section>
   <section>
