added the content on the students section

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             </div>
         </div>
       </div>
+      <img class="ml-2 my-4" src="images/arrow-right.svg" alt=""> 
     </div>
   </section>
   <section>
@@ -135,14 +136,27 @@
             <img src="images/logo-nedbank.png" alt="" width="220px" height="120px">
             <img src="images/logo-vuma.png" alt="" width="220px" height="120px">
             <img src="images/logo-flash.png" alt="" width="220px" height="120px">
-          </div> 
+          </div>
+          <img src="images/arrow-right.svg" alt="">
+            <div class="mt-4 border rounded border-primary text-center text-primary" style="width: 140px;">
+              <a href="#">find out more</a>
+            </div> 
       </div>
     </div>
   </section>
   <section>
-    <div class="container" style="width: auto; height: 400px; background-color: darkslategrey">
-      
-    </div>
+    <div class="container" style="width: auto; height: 490px; background-color: darkslategrey">
+      <div class="row"> 
+        <div class="col m-5 p-2"> 
+          <h1 class="text-light">What our students think about our courses</h1>
+            <p class="text-light">Being a Digital Account Manager I’ve wanted to transition into the world of programming to better understand how to manage teams and build my own digital assets for web and mobile. I found that this 4 week web fundamentals course truly gave me all the necessary skills and tools to achieve my goals.</p>
+            <p class="text-primary">- Kay Solomons</p>
+            <img style="color:skyblue;" src="images/arrow-right.svg" alt="">
+        </div>
+          <div class="col m-5 p-2"> 
+            <img class="float-right" src="images/Kay.jpg" alt="" width="500px" height="320px">
+          </div> 
+      </div>
   </section>
   <section>
     <div class="container" style="width: auto; height: 400px; background-color: whitesmoke">
