added the responsive navbar toggler on small screens

--- a/cart.html
+++ b/cart.html
@@ -33,21 +33,74 @@
   <section class="bg-light" style="height: 800px;">
    
   </section>
-  <section style="height: 400px;background-color: #101419;">
-    <div class="container">
-    <div class="row align-items-center" style="height: 200px;">
-      <div class="col text-primary ml-5" >
-        GENERAL
-      </div>
-      <div class="col text-primary">
-        WHY US
-      </div>
-      <div class="col text-primary">
-        DEVELOPER COURSES
-      </div>
-      <div class="col text-primary ml-3">
-        CONTACT US
-      </div>
+  <section>
+    <div class="container-fluid" style="height: auto; background-color: darkslategray">
+      <footer class="page-footer font-small indigo">
+        <div class="container text-center text-md-left">
+          <div class="row p-5">
+            <div class="col-sm mx-auto ">
+              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">GENERAL</h5>
+              <br>
+              <ul class="list-unstyled">
+                <li>
+                  <a class="text-light" href="#!">Home</a>
+                </li>
+                <br>
+                <li>
+                  <a class="text-light" href="#!">Faq</a>
+                </li>
+              </ul>
+            </div>
+            <hr class="clearfix w-100 d-md-none">
+            <div class="col-sm mx-auto">
+              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">WHY US</h5>
+              <br>
+              <ul class="list-unstyled">
+                <li>
+                  <a class="text-light" href="#!">Why Study with us?</a>
+                </li>
+                <br>
+                <li>
+                  <a class="text-light" href="#!">Financial Aid - Study for Just R1</a>
+                </li>
+                <br>
+                <li>
+                  <a class="text-light" href="#!">Internship - Work, Learn & Earn</a>
+                </li>
+              </ul>
+            </div>
+            <hr class="clearfix w-100 d-md-none">
+            <div class="col-md-3 mx-auto align-iet">
+              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">DEVELOPER COURSES</h5>
+              <br>
+              <ul class="list-unstyled">
+                <li>
+                  <a class="text-light" href="#!">Full Stack Web Developer</a>
+                </li>
+              </ul>
+            </div>
+            <hr class="clearfix w-100 d-md-none">
+            <div class="col-md-3 mx-auto">
+              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">CONTACT US</h5>
+              <br>
+              <ul class="list-unstyled">
+                <li>
+                  <img class="img-fluid mr-2" src="images/phone-icon.svg" alt=""><a class="text-light font-weight-bold" href="+27 21 461 68 17">+27 21 461 68 17</a>
+                </li>
+                <br>
+                <li>
+                  <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light small" href="#!">hello@themavenacademy.one</a>
+                </li>
+                <br>
+                <li>
+                  <img class="img-fluid mr-2" src="images/location-icon.svg" alt=""><a class="text-light small p-0" href="#!">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer> 
+    </div>
   </section>
   <footer>
     <nav class="navbar navbar-expand-sm" style="height: 100px; background-color: #000000;">
