--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container"> 
         <img src="images/maven_academy.svg" alt=""> 
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-3"><a class="nav-link" href="">Home</a>
           </li>
@@ -23,7 +27,7 @@
           </li>
           <li class="nav-item mx-3"><a class="nav-link" href="">Cart</a>
           </li>
-          <img class="img" src="images/gift-icon.svg" alt="" width="50px" height="30px">
+          <!-- <img class="img" src="images/gift-icon.svg" alt="" width="50px" height="30px"> -->
         </ul>
       </div>  
     </nav>
@@ -166,7 +170,7 @@
   <section>
     <div class="container-fluid" style="height: auto; background-color: whitesmoke">
       <div class="d-flex justify-content-center p-2">
-        <img class="img-fluid" src="images/contact-banner.png" alt="">
+        <img class="img-fluid mt-5" src="images/contact-banner.png" alt="">
       </div>
       <div class="p-5">
         <h1 class="text-center">Thank you for your enquiry.</h1>
@@ -175,7 +179,7 @@
         <p class="text-center">Or call us directly on <a href="#">+27 (0)87 073 5694</a></p>
         <p class="text-center pb-3 m-0">Need a quicker answer ? visit out Faq page :<a href="#"> Click here</a></p>
       </div>
-    </div>
+    </div> 
   </section>
   <section>
     <div class="container-fluid" style="height: auto; background-color: darkslategray">
@@ -233,11 +237,11 @@
                 </li>
                 <br>
                 <li>
-                  <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light" href="#!">hello@themavenacademy.one</a>
+                  <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light small" href="#!">hello@themavenacademy.one</a>
                 </li>
                 <br>
                 <li>
-                  <img class="img-fluid mr-2" src="images/location-icon.svg" alt=""><a class="text-light small p-1" href="#!">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
+                  <img class="img-fluid mr-2" src="images/location-icon.svg" alt=""><a class="text-light small p-0" href="#!">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
                 </li>
               </ul>
             </div>
@@ -259,5 +263,8 @@
     </div>
     </nav> 
   </footer>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
