--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,25 @@
   <title>Document</title>
 </head>
 <body>
+  <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
+    <div class="container">
+      <a class="navbar-brand" href="#">NavBar</a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="">Home</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Work</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Resources</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Contact Us</a></li>
+      </ul>
+      </div>
+  </nav>
   <div class="icon">
     <img src="images/app-summary-icon.svg" alt="">
   </div>
@@ -170,5 +189,8 @@
   <div class="icon">
     <img src="images/wle-icon.svg" alt="">
   </div>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
